src/objects/Project_Date_Range__c.object
<CustomObject>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Participant__c</fullName>
        <label>Project Participant</label>
        <referenceTo>Project_Participant__c</referenceTo>
        <relationshipLabel>Date Ranges</relationshipLabel>
        <relationshipName>Date_Ranges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Date Range</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Range ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Date Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ordered_Dates_On_Project_Range</fullName>
        <active>true</active>
        <errorConditionFormula>Start__c &gt; End__c</errorConditionFormula>
        <errorDisplayField>End__c</errorDisplayField>
        <errorMessage>The End date cannot be before the Start date.</errorMessage>
    </validationRules>
</CustomObject>